--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,6 @@ services:
     ports:
       - "9092:9092"
     environment:
-      - KAFKA_ADVERTISED_HOST_NAME
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
       - KAFKA_CREATE_TOPICS=weather:1:1
     depends_on:
@@ -38,32 +37,52 @@ services:
   consume_to_pg:
     build: .
     command: ["python", "consume_to_pg.py"]
+    volumes:
+      - ./:/app
     environment:
       - POSTGRES_PASSWD
-      - KAFKA_ADVERTISED_HOST_NAME
+      - MAX_CONNECTION_RETRIES
+      - KAFKA_HOSTS
     depends_on:
       - kafka
       - message_intercept
-    restart: unless-stopped
 
   consume_to_cloudwatch:
     build: .
     command: ["python", "consume_to_cloudwatch.py"]
+    volumes:
+      - ./:/app
     environment:
+      - MAX_CONNECTION_RETRIES
+      - KAFKA_HOSTS
       - AWS_DEFAULT_REGION
       - AWS_SECRET_ACCESS_KEY
       - AWS_ACCESS_KEY_ID
-      - KAFKA_ADVERTISED_HOST_NAME
     depends_on:
       - kafka
       - message_intercept
-    restart: unless-stopped
+#    restart: unless-stopped
+#
+#  consume_to_cloudwatch:
+#    build: .
+#    command: ["python", "consume_to_cloudwatch.py"]
+#    environment:
+#      - AWS_DEFAULT_REGION
+#      - AWS_SECRET_ACCESS_KEY
+#      - AWS_ACCESS_KEY_ID
+#    depends_on:
+#      - kafka
+#      - message_intercept
+#    restart: unless-stopped
 
   message_intercept:
     build: .
     command: ["python", "message_intercept.py"]
+    volumes:
+      - ./:/app
     depends_on:
       - kafka
+      - mqtt
     environment:
-      - KAFKA_ADVERTISED_HOST_NAME
+      - KAFKA_HOSTS
     restart: unless-stopped
